# chatgpt_telegram_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: bot.py  config.py  cryptomus_pay.py  database.py  run.py  yookassa_pay.py
src_bot/bot/: enums.py  handlers.py  messages.py
src_bot/bot/commands/premium/: callback.py  callback_query_handler.py  handler.py
src_bot/config/: config.py  payment_config.py
src_bot/db/: database.py
src_bot/schemas/: premium.py
src_bot/services/payment/: client.py  stripe.py  test_ping.py  yookassa.py
src_bot/services/payment/cryptomus/: invoice.py  webhook.py
src_bot/services/payment/stripe/: invoice.py  webhook.py
src_bot/services/payment/yookassa/: invoice.py  webhook.py
